--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
-    "@ng-bootstrap/ng-bootstrap": "^4.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^4.0.1",
+    "@turf/turf": "^5.1.6",
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
-    "mapbox-gl": "^0.52.0-beta.1",
+    "mapbox-gl": "^0.52.0-beta.2",
     "ngx-mapbox-gl": "^2.2.0",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
